# rag-chatbot-mcp

./: .gitignore  ACKNOWLEDGMENTS.md  LICENSE  README.md  docker-compose.yml  requirements.txt  setup.sh
architecture/: README.md
architecture/rag-pipeline/: README.md
data/sample-data/: faq.md  rag-overview.md
desktop-configs/: claude_desktop_config.json
docker/: QUICKSTART.md  README.md  TROUBLESHOOTING.md
scripts/: start_chromadb.ps1  start_chromadb.sh
servers/: ENVIRONMENT_GUIDE.md  QUICK_TEST_SETUP.md  README.md  TESTING_README.md  TESTING_SUMMARY.md  TEST_GUIDE.md  conftest.py  run_all_tests.sh  setup_tests.sh  test-requirements-optional.txt  test-requirements.txt
servers/mcp-chunker/: QUICKSTART.md  README.md  pyproject.toml
servers/mcp-chunker/mcp_chunker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
servers/mcp-chunker/src/: __init__.py  server.py  tools.py  utils.py
servers/mcp-chunker/tests/: __init__.py  conftest.py  test_server.py  test_tools.py
servers/mcp-datasources/: QUICKSTART.md  README.md  pyproject.toml
servers/mcp-datasources/mcp_datasources.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
servers/mcp-datasources/src/: __init__.py  server.py  tools.py  utils.py
servers/mcp-datasources/tests/: __init__.py  conftest.py  test_server.py  test_tools.py
servers/mcp-embeddings/: QUICKSTART.md  README.md  pyproject.toml
servers/mcp-embeddings/src/: __init__.py  server.py  tools.py  utils.py
servers/mcp-embeddings/tests/: __init__.py  conftest.py  test_server.py  test_tools.py
servers/mcp-generator/: QUICKSTART.md  README.md  pyproject.toml
servers/mcp-generator/src/: __init__.py  server.py  tools.py  utils.py
servers/mcp-generator/tests/: __init__.py  conftest.py  test_server.py  test_tools.py
servers/mcp-reranker/: QUICKSTART.md  README.md  pyproject.toml
servers/mcp-reranker/src/: __init__.py  server.py  tools.py  utils.py
servers/mcp-reranker/tests/: __init__.py  conftest.py  test_server.py  test_tools.py
servers/mcp-retriever/: QUICKSTART.md  README.md  pyproject.toml
servers/mcp-retriever/src/: __init__.py  server.py  tools.py  utils.py
servers/mcp-retriever/tests/: __init__.py  conftest.py  test_server.py  test_tools.py
servers/mcp-vectorstore/: QUICKSTART.md  README.md  pyproject.toml
servers/mcp-vectorstore/src/: __init__.py  server.py  tools.py  utils.py
servers/mcp-vectorstore/tests/: __init__.py  conftest.py  test_server.py  test_tools.py
tests/integration/: test_rag_pipeline.py
tests/manual_testing/Solution-Testing/: install_dependencies.sh  verify_servers.sh
ui/: QUICKSTART.md  README.md  requirements.txt
ui/jupyter-notebook/: rag_pipeline_exercise.ipynb
ui/streamlit-app/: app.py
